// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tokens/Box-Shadow Dark 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "boxShadow": "none",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-boxShadow-none
      </span>
      <span
        className="label"
      >
        none
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "boxShadow": "0px 3px 6px rgba(255, 255, 255, 0.05)",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-boxShadow-xs
      </span>
      <span
        className="label"
      >
        0px 3px 6px rgba(255, 255, 255, 0.05)
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "boxShadow": "0px 4px 5px rgba(255, 255, 225, 0.07)",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-boxShadow-sm
      </span>
      <span
        className="label"
      >
        0px 4px 5px rgba(255, 255, 225, 0.07)
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Box-Shadow Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "boxShadow": "0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --box-shadow-none
      </span>
      <span
        className="label"
      >
        0
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Box-Shadow Familys 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "boxShadow": "none",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --box-shadow-none-t
      </span>
      <span
        className="label"
      >
        none
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "boxShadow": "0px 3px 6px rgba(0, 0, 0, 0.05)",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --box-shadow-xs-t
      </span>
      <span
        className="label"
      >
        0px 3px 6px rgba(0, 0, 0, 0.05)
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "boxShadow": "0px 4px 5px rgba(0, 0, 0, 0.07)",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --box-shadow-sm-t
      </span>
      <span
        className="label"
      >
        0px 4px 5px rgba(0, 0, 0, 0.07)
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "boxShadow": "0 0 0 1px var(--color-primary)",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --box-shadow-focus-in-t
      </span>
      <span
        className="label"
      >
        0 0 0 1px var(--color-primary)
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "boxShadow": "0 0 10px 0 var(--color-primary)",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --box-shadow-focus-out-t
      </span>
      <span
        className="label"
      >
        0 0 10px 0 var(--color-primary)
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Box-Shadow Light 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "boxShadow": "none",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-boxShadow-none
      </span>
      <span
        className="label"
      >
        none
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "boxShadow": "0px 3px 6px rgba(0, 0, 0, 0.05)",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-boxShadow-xs
      </span>
      <span
        className="label"
      >
        0px 3px 6px rgba(0, 0, 0, 0.05)
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "boxShadow": "0px 4px 5px rgba(0, 0, 0, 0.07)",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-boxShadow-sm
      </span>
      <span
        className="label"
      >
        0px 4px 5px rgba(0, 0, 0, 0.07)
      </span>
    </div>
  </div>
</div>
`;
